feat: 인증 API 추가 (하이브리드 oneTimeCode 로그인 · 네이티브 소셜로그인 · refresh/logout)
- AuthController/AuthFacade 신설: refresh(회전 미구현, refreshToken 그대로 반환), logout, 네이티브
  소셜로그인(google serverAuthCode 교환), 하이브리드 oneTimeCode→토큰 교환(/api/auth/exchange)
- 로컬 웹 ↔ 개발 서버 하이브리드 로그인: 진입점(/oauth2/local-entry, dev 전용)에서 표식 쿠키를
  심고, OAuth2SuccessHandler 가 이를 감지해 토큰 대신 1회용 oneTimeCode(Redis 30초 TTL)만 넘김
- fix: /api/auth/logout 이 /api/auth/ 스킵 프리픽스에 먹혀 인증이 통째로 건너뛰던 문제를
  SKIP_TOKEN_EXCEPTIONS 로 예외 처리 (@AuthenticationPrincipal null 방지)
- ErrorCode 추가: INVALID_OAUTH_TOKEN, UNSUPPORTED_OAUTH_PROVIDER
- build.gradle: spring-boot-starter-restclient 추가 (Boot 4.x web starter 분리로 RestClient.Builder
  자동 구성이 빠져 네이티브 로그인 토큰 교환이 기동 실패하던 것 해결)